--- a/QwikiWiki.Website/ConnectionStrings.config
+++ b/QwikiWiki.Website/ConnectionStrings.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0"?>
 <connectionStrings>
-  <!--<add name="strConn" connectionString="Data Source=MKH-LTOP-807\SQLEXPRESS;Initial Catalog=QwikiWiki;User ID=QwikiWiki;Password=QwikiWiki!;" providerName="System.Data.SqlClient"/>-->
-  <!--<add name="strConn" connectionString="Data Source=MKH-LTOP-807\SQLEXPRESS;Initial Catalog=QwikiWiki;User ID=QwikiWiki;Password=QwikiWiki!;" providerName="System.Data.SqlClient"/>-->
-  <add name="strConn" connectionString="Data Source=DESKTOP-C4B44RF\SQLEXPRESS;Initial Catalog=QwikiWiki;User ID=QwikiWiki;Password=QwikiWiki!;" providerName="System.Data.SqlClient"/>
+ <!--
+  
+  <add name="strConn" connectionString="Data Source=SQL5024.Smarterasp.net;Initial Catalog=DB_9E3F6F_QwikiWiki;User Id=DB_9E3F6F_QwikiWiki_admin;Password=Password123;" providerName="System.Data.SqlClient"/>
+   
+  <add name="strConn" connectionString="Data Source=MKH-LTOP-807\SQLEXPRESS;Initial Catalog=QwikiWiki;User ID=QwikiWiki;Password=QwikiWiki!;" providerName="System.Data.SqlClient"/>
+ 
+ -->
+  
+ <add name="strConn" connectionString="Data Source=DESKTOP-C4B44RF\SQLEXPRESS;Initial Catalog=QwikiWiki;User ID=QwikiWiki;Password=QwikiWiki!;" providerName="System.Data.SqlClient"/>
+  
 </connectionStrings>
